--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "bootstrap": "^5.2.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^9.0.0",
     "ngx-order-pipe": "^2.2.0",
